# travel-insurance-rag-chat-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
scripts/: ingest.py
src/: config.py  constants.py  database.py  guardrails.py  messages.py  models.py  workflow.py
src/agents/: claim_action.py  claim_validation.py  emergency_escalation.py  policy_inquiry.py  router_orchestrator.py
src/api/: index.py
src/graph/: edges.py  state.py  workflow.py
src/services/: img_storage.py
src/utils/: helpers.py
